<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".opened_chats">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/divider_layout">

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/arrow_icon"
            android:background="@drawable/ellipse_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/my_name"
            android:textSize="22sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_action_name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout"
        android:layout_marginTop="10dp"
        android:textColor="#B4C2D3"
        android:textSize="15sp"
        android:text="Today"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="Wow."
        android:layout_marginTop="30dp"
        android:background="@drawable/chats"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="180dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="15sp"
        android:textColor="#000000"
        android:text="@string/text2"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/chats"
        android:layout_marginTop="20dp"/>

     <TextView
         android:id="@+id/text4"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text3"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:textSize="15sp"
         android:textColor="#000000"
         android:text="@string/text3"
         android:background="@drawable/chats2"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:paddingLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:hint="Type a message..."/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_gravity="bottom"
            app:fabSize="mini"
            android:src="@drawable/forward_arrow"
            android:backgroundTint="@color/floatingButton"/>





























    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>