<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unfollow"
    tools:context=".UnfollowFriend">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/arrow_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/profile_ellipse"/>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:src="@drawable/bernette"/>

    <TextView
        android:id="@+id/text12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1"
        android:text="@string/bernette"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/relative_layout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text12"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="1293"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:text="80"
            android:layout_centerInParent="true"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="124"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#8894A2"
            android:textAllCaps="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:text="friends"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#8894A2"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="networks"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#8894A2"
            android:textAllCaps="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="uploads"
            android:textStyle="bold"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relative_layout2"
        android:text="Remove Friend"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/remove_round"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="10dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraint_layout1"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="About"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="15sp"
                android:textColor="#8894A2"
                android:text="@string/about"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="Likes"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/relative_layout5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_text1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:textColor="#8894A2"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Yam"
                android:background="@drawable/likes_round"/>

            <EditText
                android:id="@+id/edit_text2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/edit_text1"
                android:layout_toRightOf="@id/edit_text1"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#8894A2"
                android:background="@drawable/likes_round"
                android:layout_alignParentBottom="true"
                android:text="@string/edit"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:textColor="#8894A2"
                android:layout_toRightOf="@id/edit_text2"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Sausage"
                android:background="@drawable/likes_round"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relative_layout5"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/edit_text3"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="#8894A2"
                android:textSize="15sp"
                android:text="Exercise"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/likes_round"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/edit_text4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="15sp"
                android:layout_toRightOf="@id/edit_text3"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="#8894A2"
                android:text="Giving"
                android:background="@drawable/likes_round"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toRightOf="@id/edit_text4"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:textColor="#8894A2"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Artificial Intelligence"
                android:background="@drawable/likes_round"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>










        </RelativeLayout>









    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>